Added fixes for V1 and updated the stress reports as well